--- a/index.html
+++ b/index.html
@@ -80,17 +80,17 @@
 
 
       <!--aca va el carrousel, a lo último-->
-
+<!--
 <section class="indefFirst">
 
   <div id="carouselExampleIndicators" class="carousel slide full-screen" data-ride="carousel">
-    <!-- Indicators -->
+     Indicators 
     <ol class="carousel-indicators">
       <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
       <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
       <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
     </ol>
-    <!-- Wrapper for slides -->
+     Wrapper for slides 
     <div class="carousel-inner">
       <div class="carousel-item">
         <img class="d-block w-100" src="./img/carou01.png" data-color="lightblue" alt="First Image">
@@ -105,7 +105,7 @@
         
       </div>
     </div>
-    <!-- Controls -->
+    Controls 
     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
   <span class="carousel-control-prev-icon" aria-hidden="true"></span>
   <span class="sr-only">Previous</span>
@@ -116,12 +116,37 @@
   </a>
   </div>
 
+-
+</section>-->
 
 
+<section>
 
+  <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="./img/carou01.png" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="./img/carou02.png" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="./img/carou03.png" class="d-block w-100" alt="...">
+      </div>
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
 
 
 </section>
+
 
 <!--scripts-->
 
