--- a/index.html
+++ b/index.html
@@ -125,13 +125,13 @@
   <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="./img/carou01.png" class="d-block w-100" alt="...">
+        <img src="./img/carou01.png" class="d-block w-100 img-fluid" alt="...">
       </div>
       <div class="carousel-item">
-        <img src="./img/carou02.png" class="d-block w-100" alt="...">
+        <img src="./img/carou02.png" class="d-block w-100 img-fluid" alt="...">
       </div>
       <div class="carousel-item">
-        <img src="./img/carou03.png" class="d-block w-100" alt="...">
+        <img src="./img/carou03.png" class="d-block w-100 img-fluid" alt="...">
       </div>
     </div>
     <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
