--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 -
 </section> -->
 
-<section id="slide-show">
+<section class="slide-show">
   
   <div class="slidex activx">
     <div class="bg1">
