--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
   <div class="slidex activx">
     <div class="bg1">
       <div class="slider-center">
-        <div class="slide-text"></div>
+        <div class="slide-text text-center"></div>
       </div>
     </div>
   </div>
@@ -132,7 +132,7 @@
   <div class="slidex">
      <div class="bg2">
        <div class="slider-center">
-          <div class="slide-text"></div>
+          <div class="slide-text frasBio">Miles de personas en el mundo tendrán acceso a una mejor salud, a partir de nuestros productos de alta tecnología.</div>
        </div>
      </div>
   </div>
@@ -180,7 +180,7 @@
   <div class="slidex">
        <div class="bg3">
          <div class="slider-center">
-            <div class="slide-text"></div>
+            <div class="slide-text frasBio02"> Innovar es <span>crecer.</span> </div>
          </div>
        </div>
  </div>
