--- a/index.html
+++ b/index.html
@@ -3,7 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">    
+    <meta name="keywords" content="Biomill, tecnología, salud, innovación, biosidus, "/>
+    <meta name="author" content="Awesome Web - The.poche" />
+    <meta property="og:type" content="website">
+    <meta property=”og:title” content="Biomill Innovar es crecer"/>    
+    <meta property=”og:description” content="En Biomill aplicamos tecnología avanzada para producir productos innovadores con menores costos, mejorando el acceso al cuidado de la salud."/>
+    <meta property="og:image" content="./img/logobio.png" />
+
     <title>Biomill | Innovar es crecer </title>
     <link rel="icon" type="image" href="./img/favicon.png"/>
 
